# BY_ChickenFarmer

./: CMakeLists.txt  README.md  build.bat  build.sh
googletest/: CMakeLists.txt
include/: CMakeLists.txt
include/drones/: drone.h
src/: CMakeLists.txt  drone.cpp
test/: CMakeLists.txt  droneTest.cpp
